--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "@pinkyrabbit/passport-local-with-header",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Passport-local strategy with headers validation for SaaS solutions",
   "main": "./lib",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "passport"
+    "passport",
+    "connect",
+    "express",
+    "cookie",
+    "session",
+    "auth",
+    "authentication"
   ],
   "author": {
     "name": "Mikita Melnikau",
